tests/files/flow_controller_tests/should_fail/066.cmdr
x = false;
print tanh(x);